fix broken layout for nextcloud v14.0.1

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#app-content-wrapper {
+#app-content #app-content-wrapper {
     display: block;
 }
 
